--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.23.1
-numpy==1.24.3
-matplotlib==3.7.1
-yfinance==0.2.18
-pandas==1.5.3
-keras==2.12.0
-tensorflow==2.12.0  
-scikit-learn==1.2.2
-lightgbm==3.3.5
+keras==3.9.0
+lightgbm==4.6.0
+matplotlib==3.10.1
+mplfinance==0.12.10b0
+numpy==2.2.4
+pandas==2.2.3
+scikit_learn==1.6.1
+streamlit==1.43.2
+yfinance==0.2.54
