--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ keras==3.9.0
 lightgbm==4.6.0
 matplotlib==3.10.1
 mplfinance==0.12.10b0
-numpy==2.2.4
+numpy
 pandas==2.2.3
 scikit_learn==1.6.1
 streamlit
 yfinance==0.2.54
-tensorflow
+tensorflow==2.16.1
